--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,3 @@
-FROM ubuntu:latest
-LABEL authors="lakroune"
-
-
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY pom.xml .
@@ -9,7 +5,8 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 
-FROM eclipse-temurin:17-jdk-alpine
+FROM eclipse-temurin:17-jre-alpine
+LABEL authors="lakroune"
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
